[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loraforge"
version = "0.1.0"
description = "LoRAForge: A production-grade pipeline for fine-tuning LLMs with LoRA on niche tasks"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Krishan", email = "kantkrishan0206@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["LoRA", "LLM", "fine-tuning", "transformers", "AI", "NLP"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "torch==2.2.2",
  "torchvision==0.17.2",
  "torchaudio==2.2.2",
  "transformers==4.43.3",
  "datasets==2.20.0",
  "accelerate==0.33.0",
  "peft==0.11.1",
  "evaluate==0.4.2",
  "bitsandbytes==0.43.1",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scikit-learn==1.5.1",
  "pyarrow==16.1.0",
  "tensorboard==2.16.2",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "tqdm==4.66.5",
  "pyyaml==6.0.2",
  "rich==13.7.1",
  "huggingface-hub==0.24.5"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "black==24.8.0",
  "ruff==0.6.9",
  "mypy==1.11.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
